# tedmagi_2024

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: sphinx.yml
src/: 1_purpose_first.rst  2_problem-solving.rst  2_the_story.rst  3_problem-solving.rst  3_representation.rst  4_representation.rst  5_enablement.rst  5_execution.rst  6_execution.rst  7_team.rst  conf.py  index.rst
