[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tedmagi_2024-11-15"
description = "This is a talk given for TEDmagi on November 15, 2024."
version = "0.1"
readme = "README.rst"
requires-python = ">= 3.10"

[project.optional-dependencies]
docs = [
  "Sphinx",
]
